# mojob_test

./: .env.env  .gitignore  README.md  pyproject.toml
src/api/v1/applications/: admin.py  apps.py  constants.py  urls.py
src/api/v1/applications/factories/: __init__.py  applications.py  jobs.py
src/api/v1/applications/migrations/: 0001_initial.py  0002_alter_job_options_alter_jobheader_options.py
src/api/v1/applications/models/: __init__.py  applications.py  jobs.py
src/api/v1/applications/serializers/: __init__.py  applications.py  jobs.py
src/api/v1/applications/tests/: test_applications.py  test_jobs.py
src/api/v1/applications/views/: __init__.py  applications.py  jobs.py
src/config/: settings.py  urls.py
src/utils/: jobs.py
